[package]
name = "talk-better"
version = "0.1.0"
authors = ["JM REMEUR <jm@remeur.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
regex = { version = "1", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
rand = "0.8.3"
serde = "1.0"
serde_yaml = "0.8"
log = "0.4.0"
env_logger = "0.8.3"